style()：调整JVM内容